# oem-lightweight

./: .gitignore  config.py  pyproject.toml  requirements.txt
oem_lightweight/: model.py  utils.py
